@@ -47,6 +47,7 @@ ICE_PATCH_API FileInfo getFileInfo(const std::string&, bool, const Ice::LoggerPt
 ICE_PATCH_API void removeRecursive(const std::string&, const Ice::LoggerPtr& = 0);
 
 ICE_PATCH_API Ice::StringSeq readDirectory(const std::string&);
+ICE_PATCH_API Ice::StringSeq readDirectory(const std::string&, const std::string&);
 ICE_PATCH_API void createDirectory(const std::string&);
 
 ICE_PATCH_API Ice::ByteSeq getMD5(const std::string&);
