@@ -26,8 +26,13 @@ IcePatch::FileI::FileI(const ObjectAdapterPtr& adapter) :
     _fileTraceLogger(adapter->getCommunicator()->getProperties()->getPropertyAsInt("IcePatch.Trace.Files") > 0 ?
 		     adapter->getCommunicator()->getLogger() : LoggerPtr()),
     _busyTimeout(IceUtil::Time::seconds(adapter->getCommunicator()->getProperties()->
-					getPropertyAsIntWithDefault("IcePatch.BusyTimeout", 10)))
+					getPropertyAsIntWithDefault("IcePatch.BusyTimeout", 10))),
+    _dir(adapter->getCommunicator()->getProperties()->getProperty("IcePatch.Directory"))
 {
+    if(!_dir.empty() && _dir[_dir.length() - 1] != '/')
+    {
+	const_cast<string&>(_dir) += '/';
+    }
 }
 
 ByteSeq
@@ -38,10 +43,12 @@ IcePatch::FileI::readMD5(const Current& current) const
     if(path == ".")
     {
 	//
-	// We cannot create an MD5 file for the current directory.
+	// We do not create a MD5 file for the top-level directory.
 	//
 	return ByteSeq();
     }
+
+    path = _dir + path;
     
     IceUtil::RWRecMutex::TryRLock sync(globalMutex, _busyTimeout);
     if(!sync.acquired())
@@ -120,8 +127,9 @@ IcePatch::DirectoryI::getContents(const Current& current) const
 	}
 
 	bool syncUpgraded = false;
-	string path = identityToPath(current.id);
-	StringSeq paths = readDirectory(path);
+	string prependPath = identityToPath(current.id);
+	string realPath = _dir + prependPath;
+	StringSeq paths = readDirectory(realPath, prependPath);
 	filteredPaths.reserve(paths.size() / 3);
 	for(StringSeq::const_iterator p = paths.begin(); p != paths.end(); ++p)
 	{
@@ -139,12 +147,12 @@ IcePatch::DirectoryI::getContents(const Current& current) const
 			    throw BusyException();
 			}
 		    }
-		    StringSeq paths2 = readDirectory(path);
+		    StringSeq paths2 = readDirectory(realPath, prependPath);
 		    pair<StringSeq::iterator, StringSeq::iterator> r2 =
 			equal_range(paths2.begin(), paths2.end(), removeSuffix(*p));
 		    if(r2.first == r2.second)
 		    {
-			removeRecursive(*p, _fileTraceLogger);
+			removeRecursive(_dir + *p, _fileTraceLogger);
 		    }
 		}
 	    }
@@ -155,7 +163,6 @@ IcePatch::DirectoryI::getContents(const Current& current) const
 	}
     }
    
-
     //
     // Call describe() outside the thread synchronization, to avoid
     // deadlocks.
@@ -205,7 +212,7 @@ IcePatch::RegularI::getBZ2Size(const Current& current) const
 	throw BusyException();
     }
     
-    string path = identityToPath(current.id);
+    string path = _dir + identityToPath(current.id);
     
     FileInfo info = getFileInfo(path, true, _fileTraceLogger);
     assert(info.type == FileTypeRegular);
@@ -250,7 +257,7 @@ IcePatch::RegularI::getBZ2(Int pos, Int num, const Current& current) const
 	throw BusyException();
     }
 
-    string path = identityToPath(current.id);
+    string path = _dir + identityToPath(current.id);
     
     FileInfo info = getFileInfo(path, true, _fileTraceLogger);
     assert(info.type == FileTypeRegular);
@@ -295,7 +302,7 @@ IcePatch::RegularI::getBZ2MD5(Int size, const Current& current) const
 	throw BusyException();
     }
 
-    string path = identityToPath(current.id);
+    string path = _dir + identityToPath(current.id);
 
     FileInfo info = getFileInfo(path, true, _fileTraceLogger);
     assert(info.type == FileTypeRegular);
